# LeadXPert_AI-Agent

./: README.md
doc-agent-system/: .env.example  .gitignore  (+4 more)
samplePRD/: .gitignore  README.md  pyproject.toml  sample-prd-scheduled-compliance-reports.md
samplePRD/app/: __init__.py  artifacts.py  audit.py  config.py  csv_report.py  date_ranges.py  db.py  dependencies.py  emailer.py  generation.py  main.py  pdf_report.py  scheduling.py  schemas.py  search.py  security.py  templates.py  worker.py
samplePRD/app/static/: app.js  index.html  styles.css
samplePRD/data/: reports.db
samplePRD/data/artifacts/tenant_001/2464180c-5853-4e21-929f-8ed1e46f8ef6/: 8b6d8ef3-d37c-4bfa-b81d-50ef82d5ee20.csv.aes
samplePRD/data/artifacts/tenant_001/24f1bc15-4c7c-41ab-90a6-053eb152317d/: 2fce7802-874c-4afd-8c62-e63919e4e02f.pdf.aes  acc3b048-0eae-495c-90be-b8c255124213.csv.aes
samplePRD/data/artifacts/tenant_001/52459946-8f1b-4154-8736-8fd20abff166/: fdb5bdc4-c52e-4e8e-a432-9129616c26de.csv.aes
samplePRD/data/artifacts/tenant_001/7e780d19-ba1b-4473-846e-a69d0b78f838/: 5ab44f9c-cf42-4bbd-8e84-8eb55150b0f4.csv.aes
samplePRD/data/artifacts/tenant_001/a437b3a4-f840-44bb-833c-5136a972405b/: 8dbc0a5c-1f1b-44ee-a534-6efba81d1766.csv.aes
samplePRD/data/artifacts/tenant_001/a79581d5-58a9-4ab4-bd23-4c8437a0cd7d/: 71d748a9-3e12-45d0-a9af-13f6810091d6.csv.aes
samplePRD/migrations/: 001_scheduled_reports.sql
samplePRD/tests/: conftest.py  helpers.py  test_date_ranges.py  test_integration.py  test_outputs.py  test_scheduled_reports_prd.py  test_scheduling.py  test_templates.py
(+130 files in other folders)
