[project]
name = "scheduled-compliance-reports"
version = "0.1.0"
description = "MVP implementation of scheduled compliance reports"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30", "cryptography>=42"]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

